--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -78,8 +78,7 @@
     "**/.vscode": true,
   },
     
-// Jupiter Notebook
-"jupyter.askForKernelRestart": false,
-
-
+  "workbench.editor.enablePreview": false,
+  "workbench.editor.enablePreviewFromQuickOpen": false,
+  "workbench.editor.tabSizing": "shrink",
 }
