--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,9 @@ Thumbs.db
 # =========================
 .site/
 .cache/
+
+# =========================
+# Quarto
+# =========================
+.quarto/
+**/*.quarto_ipynb
